# finsentiment

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/sample/: gpt4o_mini_embeddings.sample.csv  merged_final.sample.csv  price_df.sample.csv
data/sample/sentiment/: deepseek_sentiments.sample.csv  gpt41_mini_sentiments.sample.csv  gpt4o_mini_sentiments.sample.csv  gpt5_sentiments.sample.csv
docs/: ARCHITECTURE.md
finsentiment/: __init__.py  config.py  data.py  evaluation.py  features.py  modeling.py  pipeline.py
finsentiment/sentiment/: __init__.py  base.py  finbert.py  llm.py
scripts/: backtest.py  build_dataset.py  run_sentiment.py  train.py
tests/: test_pipeline.py
